chore: ts config update
