# src/routes/routes.ts
@@ -1,9 +1,9 @@
 import express from "express";
 import { requiresAuthenticated } from "../middlewares/auth-middleware";
-import { getEthereumBalance } from "../controllers/web3";
+import { getEthereumAccountBalance } from "../controllers/web3";
 
 const router = express.Router()
 
-router.route('/balance').get(requiresAuthenticated, getEthereumBalance)
+router.route('/balance').get(requiresAuthenticated, getEthereumAccountBalance)
 
 export { router as web3Router }
